[package]
name = "solana-svm-interface"
description = "Solana SVM Interface"
documentation = "https://docs.rs/solana-svm-interface"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-sdk = { workspace = true }
