[package]
name = "solana-svm-rent"
description = "Solana SVM Rent"
documentation = "https://docs.rs/solana-svm-rent"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-sdk = { workspace = true }
