[package]
name = "solana-svm-trace"
description = "Solana SVM Trace"
documentation = "https://docs.rs/solana-svm-trace"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-merkle-tree = { workspace = true }
solana-sdk = { workspace = true }
