[package]
name = "solana-timing"
description = "Solana Timing"
documentation = "https://docs.rs/solana-timing"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
name = "solana_timing"

[dependencies]
