[package]
name = "solana-svm-example-light-client"
description = "SVM light client reference example using Solana SVM API"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
solana-bpf-loader-program = { workspace = true }
solana-compute-budget = { workspace = true }
solana-merkle-tree = { workspace = true }
solana-program-runtime = { workspace = true }
solana-svm = { workspace = true }
solana-svm-trace = { workspace = true }
solana-svm-transaction = { workspace = true }
solana-sdk = { workspace = true }
solana-system-program = { workspace = true }
